# shadowsocks-port

./: Cargo.toml  README.md
examples/: polling.rs
fixtures/: gui-config.json  passwall  passwall_1  shadowsocks-config.yml  ss-local-config.json
script/: clean-target.sh  copy-ssh-keys.sh  deploy-raspberry-pi.sh  deploy-windows.sh  deploy-x86_64-linux-gnu.sh  deploy-x86_64-linux-musl.sh  deploy-x86_64-linux.sh  deploy-x86_64-windows-gnu.sh  shadowsocks-port
src/: main.rs  models.rs
src/models/: config.rs  context.rs  immortalwrt.rs  log.rs  macos.rs  remote.rs  windows.rs
