[package]
name = "shadowsocks-port"
version = "0.1.0"
edition = "2024"

[dependencies]
# 执行 shell 扩展
shellexpand = "3.1.0"
serde = { version = "1.0.215" , features = ["derive"] }
# yaml文件处理
serde_yaml = "0.9.34"
serde_json = "1.0.133"
serde_with = "3.11.0"
reqwest = { version = "0.12.9", features = ["json", "blocking"], default-features = false }
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1.83"
# 日志处理
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time"] }
# 时间
time = { version = "0.3.36", features = ["macros"]}

[profile.dev]
opt-level = 0
debug = true

codegen-units = 1
overflow-checks = true
lto = false
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
overflow-checks = false
lto = "fat"
