[package]
name = "shadowsocks-port"
version = "0.2.0"
edition = "2024"

[dependencies]
# 执行 shell 扩展
shellexpand = "3.1"
serde = { version = "1.0" , features = ["derive"] }
# yaml文件处理
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"], default-features = false }
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"
# 日志处理
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
# 时间
time = { version = "0.3", features = ["macros"]}

[profile.dev]
opt-level = 0
debug = true

codegen-units = 1
overflow-checks = true
lto = false
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
overflow-checks = false
lto = "fat"
